--- a/mitwelten_explore/requirements.txt
+++ b/mitwelten_explore/requirements.txt
@@ -16,7 +16,7 @@ dash-bootstrap-templates==1.0.8
 dash-quill==0.0.4
 h3==3.7.6
 pydantic==1.10.2
-redis
+redis==4.5.5
 markdownify==0.11.6
 bleach==6.0.0
 scipy==1.10.1
