--- a/mitwelten_explore/requirements.txt
+++ b/mitwelten_explore/requirements.txt
@@ -18,6 +18,7 @@ h3==3.7.6
 pydantic==1.10.2
 redis==4.5.5
 markdownify==0.11.6
+markdown==3.4.3
 bleach==6.0.0
 scipy==1.10.1
 python-dotenv==1.0.0
